[gd_scene load_steps=26 format=3 uid="uid://bah1j2m8y6863"]

[ext_resource type="Script" path="res://minigames/microwave_hoops/microwave_hoops.gd" id="1_6y5my"]
[ext_resource type="PackedScene" uid="uid://b131h684veml5" path="res://misc/parralax_bg.tscn" id="1_chttu"]
[ext_resource type="Texture2D" uid="uid://d2txed7yksoy6" path="res://minigames/microwave_hoops/arrowDown.png" id="3_5gbvn"]
[ext_resource type="Texture2D" uid="uid://ehfwxclj41eo" path="res://minigames/microwave_hoops/cerby_back.png" id="4_h73sa"]
[ext_resource type="Texture2D" uid="uid://dupm2w5thphss" path="res://minigames/microwave_hoops/goose.png" id="5_4ma65"]
[ext_resource type="Texture2D" uid="uid://j3el2pixomwd" path="res://minigames/microwave_hoops/microwave.png" id="6_a1wr6"]
[ext_resource type="Texture2D" uid="uid://ce5bfu7aavhpt" path="res://minigames/microwave_hoops/cerby_happy.png" id="7_b7bq5"]
[ext_resource type="AudioStream" uid="uid://dlqe0btauwr1" path="res://sounds/Groovy_Gravy.ogg" id="7_imvco"]
[ext_resource type="AudioStream" uid="uid://wvlw7uhxdu6c" path="res://sounds/shoot2.ogg" id="8_jv2eo"]
[ext_resource type="AudioStream" uid="uid://bt5d6fqed12q3" path="res://sounds/hoop.ogg" id="9_st14u"]
[ext_resource type="AudioStream" uid="uid://k2ksd586u6ia" path="res://sounds/win.ogg" id="10_kgrc3"]

[sub_resource type="Animation" id="Animation_agir2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7mj1j"]
resource_name = "moving"
length = 0.45
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dbi0k"]
_data = {
"RESET": SubResource("Animation_agir2"),
"moving": SubResource("Animation_7mj1j")
}

[sub_resource type="Curve2D" id="Curve2D_4iq4m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 128, 456, 0, 0, 0, 0, 768, 456)
}
point_count = 2

[sub_resource type="Animation" id="Animation_goec3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GoosePath/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GoosePath/PathFollow2D/Goose:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GoosePath/PathFollow2D/Goose:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.382231, 0.382232)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CerbyBack:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1078.38, 820.625)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CerbyBack:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GoosePath/PathFollow2D/Goose:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CerbyBack:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CerbyHappy:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("GoosePath/PathFollow2D/Goose:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CerbyHappy:offset:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CerbyHappy:scale:Y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CerbyHappy:scale:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.458251]
}

[sub_resource type="Animation" id="Animation_p0m58"]
resource_name = "missed"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GoosePath/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.866667),
"transitions": PackedFloat32Array(0.535887, 1),
"update": 0,
"values": [0.0, 0.75]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GoosePath/PathFollow2D/Goose:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.866667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GoosePath/PathFollow2D/Goose:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.866667),
"transitions": PackedFloat32Array(1, 0.15932),
"update": 0,
"values": [Vector2(0.382231, 0.382232), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CerbyBack:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.633334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, -100), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GoosePath/PathFollow2D/Goose:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.866667),
"transitions": PackedFloat32Array(1, 0.267944),
"update": 0,
"values": [Vector2(0, 0), Vector2(8000, 500)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"stop"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AnimationPlayer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"animation_finished"],
"method": &"emit_signal"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("GoosePath/PathFollow2D/Goose:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.00701172),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_8q2ol"]
resource_name = "scored"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GoosePath/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.535887, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GoosePath/PathFollow2D/Goose:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GoosePath/PathFollow2D/Goose:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.5),
"transitions": PackedFloat32Array(1, 1, 0.15932),
"update": 0,
"values": [Vector2(0.382231, 0.382232), Vector2(0.5, 0.5), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CerbyBack:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, -100), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GoosePath/PathFollow2D/Goose:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GoosePath/PathFollow2D/Goose:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.00701172),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_exxnk"]
resource_name = "win"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CerbyBack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GoosePath/PathFollow2D/Goose:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CerbyHappy:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CerbyHappy:offset:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(0.307787, 3.60501),
"update": 0,
"values": [0.0, -100.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CerbyHappy:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.4, 0.48]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g17r1"]
_data = {
"RESET": SubResource("Animation_goec3"),
"missed": SubResource("Animation_p0m58"),
"scored": SubResource("Animation_8q2ol"),
"win": SubResource("Animation_exxnk")
}

[sub_resource type="Curve2D" id="Curve2D_2jgv5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1104, 832, -171.349, 128.512, 171.349, -128.512, 1264, 480, -91.5, -43.5, 91.5, 43.5, 1664, 496)
}
point_count = 3

[sub_resource type="Animation" id="Animation_t5ehs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../GetReadyText:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GoText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../SpaceToScareText:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../GameWinText:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../PerfectBonusText:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../RestartText:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../GeeseLeftText:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_t53t4"]
resource_name = "blinking"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../GetReadyText:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1),
"transitions": PackedFloat32Array(1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GoText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.26667, 2.36667, 2.46667, 2.56667, 2.66667, 2.76667, 2.86667, 2.96667, 3.06667, 3.16667),
"transitions": PackedFloat32Array(1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.26667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_start_game"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../SpaceToScareText:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.26667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_baa3g"]
resource_name = "game_win"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../GameWinText:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0999999, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../SpaceToScareText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../RestartText:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../GeeseLeftText:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../ScoreText:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bf5ss"]
_data = {
"RESET": SubResource("Animation_t5ehs"),
"blinking": SubResource("Animation_t53t4"),
"game_win": SubResource("Animation_baa3g")
}

[node name="MicrowaveHoops" type="Node2D"]
script = ExtResource("1_6y5my")

[node name="Background" parent="." instance=ExtResource("1_chttu")]

[node name="Game" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Game"]
root_node = NodePath("../Arrow/PathFollow2D/ArrowDown")
libraries = {
"": SubResource("AnimationLibrary_dbi0k")
}

[node name="Arrow" type="Path2D" parent="Game"]
position = Vector2(0, -16)
curve = SubResource("Curve2D_4iq4m")

[node name="PathFollow2D" type="PathFollow2D" parent="Game/Arrow"]
position = Vector2(128, 456)

[node name="ArrowDown" type="Sprite2D" parent="Game/Arrow/PathFollow2D"]
texture = ExtResource("3_5gbvn")

[node name="Visuals" type="Control" parent="Game"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1792.0
offset_top = -92.0
offset_right = -1152.0
offset_bottom = 36.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Guards" type="ColorRect" parent="Game/Visuals"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -8.0
offset_right = 320.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Handle" type="ColorRect" parent="Game/Visuals"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -40.0
offset_right = 152.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 1)

[node name="Sprites" type="Control" parent="Game"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Game/Sprites"]
libraries = {
"": SubResource("AnimationLibrary_g17r1")
}

[node name="Microwave" type="Sprite2D" parent="Game/Sprites"]
position = Vector2(1680, 480)
scale = Vector2(0.405, 0.405)
texture = ExtResource("6_a1wr6")

[node name="GoosePath" type="Path2D" parent="Game/Sprites"]
curve = SubResource("Curve2D_2jgv5")

[node name="PathFollow2D" type="PathFollow2D" parent="Game/Sprites/GoosePath"]
position = Vector2(1104, 832)
rotation = -1.14417

[node name="Goose" type="Sprite2D" parent="Game/Sprites/GoosePath/PathFollow2D"]
visible = false
position = Vector2(0, -1.20003)
scale = Vector2(0.382231, 0.382232)
texture = ExtResource("5_4ma65")

[node name="CerbyBack" type="Sprite2D" parent="Game/Sprites"]
position = Vector2(1078.38, 820.625)
scale = Vector2(0.458251, 0.458251)
texture = ExtResource("4_h73sa")

[node name="CerbyHappy" type="Sprite2D" parent="Game/Sprites"]
visible = false
position = Vector2(1088, 824)
scale = Vector2(0.458251, 0.458251)
texture = ExtResource("7_b7bq5")

[node name="UI" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
root_node = NodePath("../ScoredText")
libraries = {
"": SubResource("AnimationLibrary_bf5ss")
}
autoplay = "blinking"

[node name="PerfectBonusText" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 645.0
offset_top = 310.0
offset_right = 906.0
offset_bottom = 403.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "PERFECT BONUS!
5,000 points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GetReadyText" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.5
offset_top = -477.0
offset_right = 209.5
offset_bottom = -389.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "GET READY!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoText" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.5
offset_top = -477.0
offset_right = 209.5
offset_bottom = -389.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "GO!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoredText" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1675.0
offset_top = -300.0
offset_right = -1256.0
offset_bottom = -212.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScoreText" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -480.0
offset_top = 32.0
offset_right = -61.0
offset_bottom = 120.0
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GeeseLeftText" type="Label" parent="UI"]
offset_left = 64.0
offset_top = 32.0
offset_right = 483.0
offset_bottom = 120.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "0"
vertical_alignment = 1

[node name="TutorialText" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -785.0
offset_top = 134.0
offset_right = -233.0
offset_bottom = 227.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Score 20 geese to receive
the 5,000 point jackpot!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpaceToScareText" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -784.0
offset_top = -514.0
offset_right = -232.0
offset_bottom = -415.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "Press Space"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameWinText" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -599.0
offset_top = -470.0
offset_right = 599.0
offset_bottom = -197.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 200
text = "GAME WIN!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartText" type="Label" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -276.0
offset_top = -85.0
offset_right = 276.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "R to restart, Q to main menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sounds" type="Node" parent="."]

[node name="BGM" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_imvco")
autoplay = true

[node name="Shoot" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("8_jv2eo")
volume_db = -3.0

[node name="Hoop" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("9_st14u")
volume_db = -3.0

[node name="Win" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("10_kgrc3")
volume_db = -3.0
